--- a/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importzorinraport.xhtml
+++ b/npkpir_23/web/ksiegowaFK/sub/dialog/dialog_importzorinraport.xhtml
@@ -17,7 +17,7 @@
    
         <p:dialog id="raportzorin" header="Zestawienie pobranych faktur do transferu xls/pobranie nr klientow -  #{WpisView.podatnikObiekt.nazwapelnaPDF}" widgetVar="raportzorin" height="900" width="1450"
               resizable="false"  onShow="ustawdialog('raportzorin','menudokumenty',1450,900);" closeOnEscape="true" onHide="resetujdialog('raportzorin');" >
-        <p:ajax event="open" listener="#{interpaperImportView.init()}" update="panelplik"/>
+        <p:ajax event="open" listener="#{importDokumentowGlownyView.init()}" update="panelplik"/>
         <p:ajax event="close" listener="#{dokfkView.resetujzaksiegowaneimport}" update="form_raportzorin"/>
         
         <!--        <h:form>
