--- a/npkpir_23/web/wspolny/sub/importxls.xhtml
+++ b/npkpir_23/web/wspolny/sub/importxls.xhtml
@@ -10,18 +10,18 @@
     
    <h:form id="panelplik">
             <p:panelGrid  columns="2" columnClasses="sixty-percent forty-percent" >
-                <p:selectOneMenu  value="#{interpaperImportView.wybranyrodzajimportu}"  converter="#{importowanyPlikConv}"
+                <p:selectOneMenu  value="#{importDokumentowGlownyView.wybranyrodzajimportu}"  converter="#{importowanyPlikConv}"
                                          style="width: 200px; margin-left: 20px;" >
                             <f:selectItem itemLabel="wybierz" itemValue="" noSelectionOption="true"/>
-                            <f:selectItems value="#{interpaperImportView.rodzajeimportu}"  var="wploopa" itemLabel="#{wploopa.opis}" itemValue="#{wploopa}"/>
+                            <f:selectItems value="#{importDokumentowGlownyView.rodzajeimportu}"  var="wploopa" itemLabel="#{wploopa.opis}" itemValue="#{wploopa}"/>
                             <p:ajax global="false" event="blur"  partialSubmit="true"/>
-                            <p:ajax global="false" event="change"  partialSubmit="true" listener="#{interpaperImportView.grid0pokaz}" update="panelplik"/>
+                            <p:ajax global="false" event="change"  partialSubmit="true" listener="#{importDokumentowGlownyView.grid0pokaz}" update="panelplik"/>
                     </p:selectOneMenu>
             </p:panelGrid>
-       <p:panelGrid columns="2" columnClasses="sixty-percent forty-percent"  binding="#{interpaperImportView.grid0}" >
+       <p:panelGrid columns="2" columnClasses="sixty-percent forty-percent"  binding="#{importDokumentowGlownyView.grid0}" >
                     <p:panelGrid columns="1" style="margin-top: 20px;">
                         <h:outputText value="Akceptowana wersja pliku xls,xlsx,xml,epp, csv" style="font-weight: bold;"/>
-                        <p:fileUpload fileUploadListener="#{interpaperImportView.zachowajplik}" 
+                        <p:fileUpload fileUploadListener="#{importDokumentowGlownyView.zachowajplik}" 
                                       mode="advanced" dragDropSupport="true" multiple="true" sequential="true" auto="true"
                                       update="messages2 panelprzyciskow akordeon5:form_importinterpaper panelplik:rodzajrach" 
                                       invalidSizeMessage="Plik za duży" allowTypes="/(\.|\/)(csv|xls|xml|xlsx|epp)$/" invalidFileMessage="Niewłaściwy format pliku: "
@@ -30,17 +30,17 @@
                         </p:fileUpload>
                         <p:growl life="3600"  id="messages2" showDetail="false"/>
                     </p:panelGrid>
-                <p:panelGrid id="rodzajrach" columns="4" style="margin-top: 20px; float: right;" rendered="false" binding="#{interpaperImportView.grid1}">
+                <p:panelGrid id="rodzajrach" columns="4" style="margin-top: 20px; float: right;" rendered="false" binding="#{importDokumentowGlownyView.grid1}">
                     <h:outputText value="rodzaj rachunków" style="margin-left: 20px;"/>
-                        <p:selectOneMenu id="symbol" value="#{interpaperImportView.rodzajdok}" 
+                        <p:selectOneMenu id="symbol" value="#{importDokumentowGlownyView.rodzajdok}" 
                                          style="width: 200px; margin-left: 10px;" >
                             <f:selectItem itemLabel="wybierz" itemValue="" noSelectionOption="true"/>
-                            <f:selectItems value="#{interpaperImportView.rodzajedokimportu}" var="pz" itemLabel="#{pz}" itemValue="#{pz}"/>
+                            <f:selectItems value="#{importDokumentowGlownyView.rodzajedokimportu}" var="pz" itemLabel="#{pz}" itemValue="#{pz}"/>
                             <p:ajax global="false" event="blur"  partialSubmit="true"/>
-                            <p:ajax global="false" event="change"  partialSubmit="true" listener="#{interpaperImportView.grid2pokaz}" update="panelprzyciskow akordeon5:form_importinterpaper"/>
+                            <p:ajax global="false" event="change"  partialSubmit="true" listener="#{importDokumentowGlownyView.grid2pokaz}" update="panelprzyciskow akordeon5:form_importinterpaper"/>
                         </p:selectOneMenu>
                     <h:outputText value="filtr faktur" style="margin-left: 20px;"/>
-                    <p:selectOneMenu  value="#{interpaperImportView.jakipobor}" 
+                    <p:selectOneMenu  value="#{importDokumentowGlownyView.jakipobor}" 
                                          style="width: 200px; margin-left: 10px;" >
                             <f:selectItem itemLabel="wybierz" itemValue=""/>
                             <f:selectItem itemLabel="osoby fizyczne" itemValue="fiz"/>
@@ -53,16 +53,20 @@
             </p:panelGrid>
         </h:form>
         <h:form id="panelprzyciskow">
-        <p:panelGrid columns="5" rendered="false" binding="#{interpaperImportView.grid2}">
-        <h:outputText value="#{interpaperImportView.wiadomoscnieprzypkonta}" style="color: red;"/>
-        <h:outputText value=" "/><h:outputText value=" "/><h:outputText value=" "/><h:outputText value=" "/>
-                <p:commandButton value="pobierz dane" actionListener="#{interpaperImportView.importujdok()}" update="panelprzyciskow akordeon5 panelzsumami" style="width: 120px;" />
-                <p:commandButton value="generuj dok" actionListener="#{interpaperImportView.generuj()}" update="akordeon5" style="width: 120px;margin-left: 20px;" rendered="false" binding="#{interpaperImportView.generujbutton}"/>
-                <p:commandButton value="drukuj " actionListener="#{interpaperImportView.drukuj()}" update="akordeon5" style="width: 120px;margin-left: 20px;" rendered="false" binding="#{interpaperImportView.drkujfizbutton}"/>
-                <p:commandButton value="usuń duplikaty " actionListener="#{interpaperImportView.usunduplikatyInter()}" update="akordeon5:form_importinterpaper:dataListImport" style="width: 120px;margin-left: 20px;"/>
-                <p:selectOneMenu id="wybierzkonto" value="#{interpaperImportView.kontodlanetto}" style="width: 250px;margin-left: 30px;" converter="#{kontoConv}" binding="#{interpaperImportView.kontobutton}"  rendered="false" >
+        <h:outputText value="#{importDokumentowGlownyView.wiadomoscnieprzypkonta}" style="color: red;"/>
+        <p:panelGrid columns="6" rendered="false" binding="#{importDokumentowGlownyView.grid2}">
+        <h:outputText value=" "/><h:outputText value=" "/><h:outputText value=" "/><h:outputText value=" "/><h:outputText value=" "/>
+                <p:commandButton value="pobierz dane" actionListener="#{importDokumentowGlownyView.importujdok()}" update="panelprzyciskow akordeon5 panelzsumami" style="width: 120px;" />
+                <p:commandButton value="generuj dok" actionListener="#{importDokumentowGlownyView.generuj()}" update="akordeon5" style="width: 120px;margin-left: 20px;" rendered="false" binding="#{importDokumentowGlownyView.generujbutton}"/>
+                <p:commandButton value="drukuj " actionListener="#{importDokumentowGlownyView.drukuj()}" update="akordeon5" style="width: 120px;margin-left: 20px;" rendered="false" binding="#{importDokumentowGlownyView.drkujfizbutton}"/>
+                <p:commandButton value="usuń duplikaty " actionListener="#{importDokumentowGlownyView.usunduplikatyInter()}" update="akordeon5:form_importinterpaper:dataListImport" style="width: 120px;margin-left: 20px;"/>
+                <p:selectOneMenu id="wybierzkonto" value="#{importDokumentowGlownyView.kontodlanetto}" style="width: 250px;margin-left: 30px;" converter="#{kontoConv}" binding="#{importDokumentowGlownyView.kontobutton}"  rendered="false" >
                     <f:selectItem itemLabel="wybierz konto dla netto" itemValue="" />
                     <f:selectItems value="#{podatnikView.listakontoRZiS}" var="item" itemLabel="#{item.pelnynumer} #{item.nazwapelna}" itemValue="#{item}" itemDescription="#{item.kontomacierzyste.pelnynumer} #{item.kontomacierzyste.nazwapelna}"/>
+                </p:selectOneMenu>
+                <p:selectOneMenu id="wybierzkonto2" value="#{importDokumentowGlownyView.kontodlabrutto}" style="width: 250px;margin-left: 30px;" converter="#{kontoConv}" binding="#{importDokumentowGlownyView.kontobutton2}"  rendered="false" >
+                    <f:selectItem itemLabel="wybierz konto dla brutto" itemValue="" />
+                    <f:selectItems value="#{podatnikView.listaKontRozrachunkowych}" var="item" itemLabel="#{item.pelnynumer} #{item.nazwapelna}" itemValue="#{item}" itemDescription="#{item.kontomacierzyste.pelnynumer} #{item.kontomacierzyste.nazwapelna}"/>
                 </p:selectOneMenu>
         </p:panelGrid>
         </h:form>  
@@ -86,18 +90,18 @@
                 /* ]]> */
             </script>-->
 <!--            <p:contextMenu for="dataListImport" style="width: 200px;">
-                <p:menuitem value="usuń wszystkie" icon="ui-icon-trash" actionListener="#{interpaperImportView.usunwszytskieimportowane()}" update=":akordeon5:form_importinterpaper"/>
+                <p:menuitem value="usuń wszystkie" icon="ui-icon-trash" actionListener="#{importDokumentowGlownyView.usunwszytskieimportowane()}" update=":akordeon5:form_importinterpaper"/>
             </p:contextMenu>-->
 <p:tabView id="akordeon5" >
     <p:tab title="udane">
             <h:form id="form_importinterpaper">
                 <p:panelGrid columns="1">
-            <p:dataTable id="dataListImport" value="#{interpaperImportView.pobranefaktury}" var="itemimp" rowIndexVar="row" widgetVar="tablicadokumentyimport" 
-                         selection="#{interpaperImportView.selected}" rowKey="#{itemimp.nr}"  
-                         style="width: 1500px; height: 480px; overflow-y: scroll; margin-top: 15px;margin-bottom: 15px;" filteredValue="#{interpaperImportView.pobranefakturyfilter}"
+            <p:dataTable id="dataListImport" value="#{importDokumentowGlownyView.pobranefaktury}" var="itemimp" rowIndexVar="row" widgetVar="tablicadokumentyimport" 
+                         selection="#{importDokumentowGlownyView.selected}" rowKey="#{itemimp.nr}"  
+                         style="width: 1500px; height: 480px; overflow-y: scroll; margin-top: 15px;margin-bottom: 15px;" filteredValue="#{importDokumentowGlownyView.pobranefakturyfilter}"
                          emptyMessage="Brak importowanych dokumentów/Sprawdź kolumny w dokumencie xls" styleClass="gridZaksiegowane"
                          sortBy="#{itemimp.nr}"  rows="150"
-                         rowsPerPageTemplate="150,300,600,900,1200" paginatorPosition="top" paginator="#{interpaperImportView.pobranefaktury.size() gt 150 ? 'true':'false'}" 
+                         rowsPerPageTemplate="150,300,600,900,1200" paginatorPosition="top" paginator="#{importDokumentowGlownyView.pobranefaktury.size() gt 150 ? 'true':'false'}" 
                          >
                 <!--                     <p:ajax event="rowSelect" oncomplete="pokazwierszedok();" update=":formwpisdokument, :dialogwiersze" />-->
                 <p:ajax event="filter" global="false"/>
@@ -171,9 +175,9 @@
                 </p:column>-->
             </p:dataTable>
             <p:contextMenu for="form_importinterpaper:dataListImport" style="width: 200px;">
-                <p:menuitem value="Zmień klienta" icon="ui-icon-gear"  onclick="PF('dlgwprowadzanieklientaimport').show();" actionListener="#{interpaperImportView.przeniesklienta()}"/>
-                <p:menuitem value="Usuń wybrane" icon="ui-icon-gear" actionListener="#{interpaperImportView.usunwybrane()}" update="akordeon5:form_importinterpaper:dataListImport"/>
-                <p:menuitem value="Usuń duplikaty" icon="ui-icon-gear" actionListener="#{interpaperImportView.usunduplikaty()}" update="akordeon5:form_importinterpaper:dataListImport"/>
+                <p:menuitem value="Zmień klienta" icon="ui-icon-gear"  onclick="PF('dlgwprowadzanieklientaimport').show();" actionListener="#{importDokumentowGlownyView.przeniesklienta()}"/>
+                <p:menuitem value="Usuń wybrane" icon="ui-icon-gear" actionListener="#{importDokumentowGlownyView.usunwybrane()}" update="akordeon5:form_importinterpaper:dataListImport"/>
+                <p:menuitem value="Usuń duplikaty" icon="ui-icon-gear" actionListener="#{importDokumentowGlownyView.usunduplikaty()}" update="akordeon5:form_importinterpaper:dataListImport"/>
             </p:contextMenu>
                     </p:panelGrid>
         </h:form>
@@ -181,12 +185,12 @@
     <p:tab title="inny okres"> 
         <h:form id="form_importinterpaper1">
             <p:panelGrid columns="1">
-            <p:dataTable id="dataListImport" value="#{interpaperImportView.innyokres}" var="itemimp" rowIndexVar="row" widgetVar="tablicadokumentyimport1" 
+            <p:dataTable id="dataListImport" value="#{importDokumentowGlownyView.innyokres}" var="itemimp" rowIndexVar="row" widgetVar="tablicadokumentyimport1" 
                          rowKey="#{itemimp.nr}"  
                          style="width: 1420px; height: 480px; overflow-y: scroll; margin-top: 15px;margin-bottom: 15px;"
                          emptyMessage="Brak importowanych dokumentów/Sprawdź kolumny w dokumencie xls" styleClass="gridZaksiegowane"
                          sortBy="#{itemimp.nr}"  
-                         rowsPerPageTemplate="150,300,600,900,1200" paginatorPosition="top" paginator="#{interpaperImportView.innyokres.size() gt 150 ? 'true':'false'}" rows="150"
+                         rowsPerPageTemplate="150,300,600,900,1200" paginatorPosition="top" paginator="#{importDokumentowGlownyView.innyokres.size() gt 150 ? 'true':'false'}" rows="150"
                          >
                 <!--                     <p:ajax event="rowSelect" oncomplete="pokazwierszedok();" update=":formwpisdokument, :dialogwiersze" />-->
                 <p:ajax event="filter" global="false"/>
@@ -257,12 +261,12 @@
     <p:tab title="nieudane"> 
         <h:form id="form_importinterpaper2">
                 <p:panelGrid columns="1">
-                    <p:dataTable id="dataListImport" value="#{interpaperImportView.importyzbrakami}" var="itemimp" rowIndexVar="row" widgetVar="tablicadokumentyimport2" 
+                    <p:dataTable id="dataListImport" value="#{importDokumentowGlownyView.importyzbrakami}" var="itemimp" rowIndexVar="row" widgetVar="tablicadokumentyimport2" 
                          rowKey="#{itemimp.nr}"  
                          style="width: 1420px; height: 480px; overflow-y: scroll; margin-top: 15px;margin-bottom: 15px;"
                          emptyMessage="Brak importowanych dokumentów/Sprawdź kolumny w dokumencie xls" styleClass="gridZaksiegowane"
                          sortBy="#{itemimp.nr}"  
-                         rowsPerPageTemplate="150,300,600,900,1200" paginatorPosition="top" paginator="#{interpaperImportView.importyzbrakami.size() gt 150 ? 'true':'false'}" rows="150"
+                         rowsPerPageTemplate="150,300,600,900,1200" paginatorPosition="top" paginator="#{importDokumentowGlownyView.importyzbrakami.size() gt 150 ? 'true':'false'}" rows="150"
                          >
                 <!--                     <p:ajax event="rowSelect" oncomplete="pokazwierszedok();" update=":formwpisdokument, :dialogwiersze" />-->
                 <p:ajax event="filter" global="false"/>
@@ -333,12 +337,12 @@
     <p:tab title="pominięte"> 
         <h:form id="form_importinterpaper3">
             <p:panelGrid columns="1" >
-            <p:dataTable id="dataListImport" value="#{interpaperImportView.przerwanyimport}" var="itemimp" rowIndexVar="row" widgetVar="tablicadokumentyimport3" 
+            <p:dataTable id="dataListImport" value="#{importDokumentowGlownyView.przerwanyimport}" var="itemimp" rowIndexVar="row" widgetVar="tablicadokumentyimport3" 
                          rowKey="#{itemimp.nr}"  
                          style="width: 1420px; height: 480px; overflow-y: scroll; margin-top: 15px;margin-bottom: 15px;" 
                          emptyMessage="Brak importowanych dokumentów/Sprawdź kolumny w dokumencie xls" styleClass="gridZaksiegowane"
                          sortBy="#{itemimp.nr}"  
-                         rowsPerPageTemplate="150,300,600,900,1200" paginatorPosition="top" paginator="#{interpaperImportView.przerwanyimport.size() gt 150 ? 'true':'false'}" rows="150"
+                         rowsPerPageTemplate="150,300,600,900,1200" paginatorPosition="top" paginator="#{importDokumentowGlownyView.przerwanyimport.size() gt 150 ? 'true':'false'}" rows="150"
                          >
                 <!--                     <p:ajax event="rowSelect" oncomplete="pokazwierszedok();" update=":formwpisdokument, :dialogwiersze" />-->
                 <p:ajax event="filter" global="false"/>
@@ -411,11 +415,11 @@
 <h:form id="panelzsumami">
     <p:panelGrid columns="6">
         <h:outputText value="netto w pln"/>
-        <bcf:outputpl value="#{interpaperImportView.nettopln}"/>
+        <bcf:outputpl value="#{importDokumentowGlownyView.nettopln}"/>
         <h:outputText  value="vat w pln"/>
-        <bcf:outputpl value="#{interpaperImportView.vatpln}"/>
+        <bcf:outputpl value="#{importDokumentowGlownyView.vatpln}"/>
         <h:outputText value="brutto w pln"/>
-        <bcf:outputpl value="#{interpaperImportView.bruttopln}"/>
+        <bcf:outputpl value="#{importDokumentowGlownyView.bruttopln}"/>
     </p:panelGrid>
 </h:form>
 </ui:composition>   
