--- a/npkpir_23/web/wspolny/sub/faktura/faktura_archiwum.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_archiwum.xhtml
@@ -142,6 +142,8 @@
                             </p:inplace>
                              <h:outputText value="konto bankowe"/>
                              <h:outputText value="#{wpis.nrkontabankowego}"/>
+                             <h:outputText value="z okresowej"/>
+                             <h:outputText value="&#x2713;" rendered="#{wpis.wygenerowanaautomatycznie}" style="font-weight: 900;color: green;"/>
 <!--                             <h:outputText value="kwota netto"/>
                              <bcf:outputpl value="#{wpis.netto}"/>
                              <h:outputText value="kwota vat"/>
