--- a/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
+++ b/npkpir_23/web/wspolny/sub/faktura/faktura_sporzadzone.xhtml
@@ -182,6 +182,8 @@
                                     <p:inputText value="#{wpis.kontrahent.email}"  style="width: 180px;" />
                                 </f:facet>
                             </p:inplace>
+                            <h:outputText value="z okresowej"/>
+                            <h:outputText value="&#x2713;" rendered="#{wpis.wygenerowanaautomatycznie}" style="font-weight: 900;color: green;"/>
                             <h:outputText value="konto bankowe"/>
                             <h:outputText value="#{wpis.nrkontabankowego}"/>
                             <h:outputText value="kwota netto"/>
